<resources>
    <string name="app_name">Game Trail Tracker</string>
    <string name="editTextDate">Select Date</string>
    <string name="editTextName">Name</string>
    <string name="buttonSelectImages">Select Images</string>
    <string name="editTextSpecieName">Specie Name</string>
    <string name="weaponFragment">Weapons</string>
    <string name="huntFragment">Hunts</string>
    <string name="trophyFragment">Trophies</string>
    <string name="checkBoxIsContinues">No date</string>
    <string name="buttonSaveLocation">Save hunt</string>
    <string name="check_mark_image_description">Check mark</string>
    <string name="buttonSaveAnimal">Save trophy</string>
    <string name="editTextWeight">Set weight</string>
    <string name="editTextMeasurement">Set measurement</string>
    <string name="editTextWeaponName">Weapon name</string>
    <string name="buttonSaveWeapon">Save weapon</string>
    <string name="editTextWeaponNotes">Add notes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="back_button">Back</string>
    <string name="view">View</string>
    <string name="hunting_location">Location</string>
    <string name="hunting_weapon">Weapon</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="apply_filters">Apply</string>
    <string name="edit_text_start_date_location_filter">Start Date</string>
    <string name="edit_text_end_date_location_filter">End Date</string>
    <string name="edit_text_start_date_animal_filter">Start Date</string>
    <string name="edit_text_end_date_animal_filter">End Date</string>
    <string name="clear_filters">Clear filters</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="specie_name">Specie name</string>
    <string name="weight">Weight</string>
    <string name="measurement">Measurement</string>
    <string name="date">Date</string>
    <string name="weapon_name">Weapon name</string>
    <string name="weapon_notes">Weapon notes</string>
    <string name="title">Game Trail Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_image_description">Zoomed in image</string>
    <string name="add_hunt">Add new hunt</string>
    <string name="add_trophy">Add new trophy</string>
    <string name="add_weapon">Add new weapon</string>
    <string name="addHuntText">Add Hunt</string>
    <string name="addTrophyText">Add trophy</string>
    <string name="addWeaponText">Add Weapon</string>
    <string name="startDate">Select start date</string>
    <string name="endtDate">Select end date</string>
    <string name="location">Location</string>
    <string name="addToHunt">Add to hunt [Optional]</string>
    <string name="addWeapon">Add a weapon [Optional]</string>
    <string name="selectHunt">Select hunt</string>
    <string name="selectWeapon">Select weapon</string>
    <string name="hunts">Hunts</string>
    <string name="trophies">Trophies</string>
    <string name="weapons">Weapons</string>
    <string name="weapon_details">Weapon details</string>
    <string name="images">Images:</string>
    <string name="name">Name</string>
    <string name="notes">Notes:</string>
    <string name="trophy_details">Trophy details</string>
    <string name="weapon">Weapon</string>
    <string name="search_hint">Search…</string>
    <string name="user_settings">User settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="default_measurements">Default</string>
    <string name="theme">Theme</string>
    <string name="update">Update</string>
    <string name="weight_detail">%1$s %2$s</string>
    <string name="measurement_detail">%1$s %2$s</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="update_trophy">Update Trophy</string>
    <string name="update_weapon">Update Weapon</string>
    <string name="button_update">Update</string>
    <string name="update_hunt">Update Hunt</string>
    <string name="home">Home</string>
    <string name="add_hunt_images">Add Hunt Images</string>
    <string name="add_weapon_images">Add Weapon Images</string>
    <string name="add_bullet">Add new bullet</string>
    <string name="bullet_image_description">bullet image</string>
    <string name="arrow_image_description">arrow image</string>
    <string name="add_bullet_Text">Add Bullet</string>
    <string name="add_arrow_Text">Add Arrow</string>
    <string name="bullet_self_load">Hand loaded</string>
    <string name="bullet_store_bought">Store bought</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="bulletWeight">Bullet Weight</string>
    <string name="bulletType">Bullet Type</string>
    <string name="weaponType">Weapon Type</string>
    <string name="bulletNotes">Notes</string>
    <string name="bulletCaseBrand">Case Brand</string>
    <string name="bulletPowderBrand">Powder Brand</string>
    <string name="bulletPowderWeight">Powder Weight</string>
    <string name="buttonSaveBullet">Save bullet</string>
    <string name="buttonSaveArrow">Save arrow</string>
    <string name="update_bullet">Update Bullet</string>
    <string name="update_arrow">Update Arrow</string>
    <string name="bullet_details">Bullet Details</string>
    <string name="brandOrMan">Brand Or Manufacturer</string>
    <string name="type">Type</string>
    <string name="grains">grains (gr)</string>
    <string name="add_trophy_images">Add Trophy Images</string>
    <string name="add_arrow">Add new arrow</string>
    <string name="arrow_details">Arrow Details</string>
    <string name="shaftMaterial">Shaft Material</string>
    <string name="length">Length</string>
    <string name="fletchingType">Fletching Type</string>
    <string name="pointType">Point Type</string>
    <string name="pointWeight">Point Weight</string>
    <string name="nockType">Nock Type</string>
    <string name="measurementType">Measurement Type</string>
    <string-array name="measurements_array">
        <item>cm</item>
        <item>inch</item>
    </string-array>

    <string-array name="weights_array">
        <item>kg</item>
        <item>pounds</item>
    </string-array>

    <string-array name="bullet_type_array">
        <item>Full Metal Jacket (FMJ)</item>
        <item>Hollow Point (HP)</item>
        <item>Soft Point (SP)</item>
        <item>Ballistic Tip</item>
        <item>Boat Tail Hollow Point (BTHP)</item>
        <item>Jacketed Hollow Point (JHP)</item>
        <item>Wad Cutter</item>
        <item>Semi-Wad Cutter</item>
        <item>Round Nose (RN)</item>
        <item>Flat Nose (FN)</item>
        <item>Polymer Tip</item>
        <item>Bonded Hollow Point (BHP)</item>
        <item>Lead Round Nose (LRN)</item>
        <item>Jacketed Soft Point (JSP)</item>
        <item>Spire Point</item>
        <item>Open Tip Match (OTM)</item>
        <item>Tracer</item>
        <item>Armor Piercing (AP)</item>
        <item>Frangible</item>
        <item>Silvertip</item>
        <item>Gas Check</item>
        <item>Monolithic Solid</item>
        <item>Plastic Tipped Hollow Point</item>
        <item>Subsonic</item>
        <item>Varmint</item>
    </string-array>

    <string-array name="weapon_type_array">
        <item>Rifle</item>
        <item>Pistol</item>
        <item>Bow</item>
        <item>Crossbow</item>
    </string-array>
    <!--Image content descriptions-->
    <string name="mountain_range">Mountain Range</string>
    <string name="trophy_image_description">Trophy image</string>
    <string name="search_icon">Search Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="image">Image</string>
    <string name="hunt_image_description">Hunt image</string>
    <string name="weapon_image_description">Weapon image</string>
</resources>