<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Add.AnimalFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextSpecieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextSpecieName"/>

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextWeight" />

    <EditText
        android:id="@+id/editTextMeasurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextMeasurement" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextDate"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false" />

    <Spinner
        android:id="@+id/spinnerLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerWeapon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonSelectAnimalImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSelectImages" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSaveAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSaveAnimal" />

    <ImageView
        android:id="@+id/checkMarkAnimalAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        android:contentDescription="@string/check_mark_image_description"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

</LinearLayout>