<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Add.LocationFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextName"/>

    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextDate"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false" />

    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextDate"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false" />

    <CheckBox
        android:id="@+id/checkBoxIsContinues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxIsContinues" />

    <Button
        android:id="@+id/buttonSelectLocationImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSelectImages" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSaveLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSaveLocation" />

    <ImageView
        android:id="@+id/checkMarkLocationAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_checkmark"
        android:contentDescription="@string/check_mark_image_description"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

</LinearLayout>