<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.view.AnimalViewDetailFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextSpecieNameViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextSpecieName"/>

    <EditText
        android:id="@+id/editTextWeightViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextWeight" />

    <EditText
        android:id="@+id/editTextMeasurementViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextMeasurement" />

    <EditText
        android:id="@+id/editTextDateViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextDate"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false" />

    <EditText
        android:id="@+id/LocationViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextDate"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false" />

    <EditText
        android:id="@+id/WeaponViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextDate"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesAnimalRecyclerViewViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_edit_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginEnd="8dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_delete_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>