<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.add.WeaponAddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <EditText
            android:id="@+id/editTextWeaponName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextWeaponName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <EditText
            android:id="@+id/editTextWeaponNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextWeaponNotes" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSelectWeaponImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSelectImages" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imagesWeaponRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSaveWeapon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSaveWeapon" />

    <ImageView
        android:id="@+id/checkMarkWeaponAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/check_mark_image_description"
        android:src="@drawable/ic_checkmark"
        android:visibility="gone" />

</LinearLayout>