<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.UserSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDefaultMeasurements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_measurements"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:padding="16dp" />

        <TextView
            android:id="@+id/textViewMeasurementLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measurement"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <Spinner
            android:id="@+id/spinnerMeasurementUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"/>

        <TextView
            android:id="@+id/textViewWeightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="start"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <Spinner
            android:id="@+id/spinnerWeightUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"/>

        <TextView
            android:id="@+id/textViewTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:padding="16dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:padding="20dp"/>
    </LinearLayout>

</FrameLayout>