<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.view.filter.AdvancedLocationFilterFragment"
    android:padding="16dp">

    <Button
        android:id="@+id/apply_location_filters_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/clear_location_filters_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_filters"
        app:layout_constraintBottom_toTopOf="@id/apply_location_filters_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextStartDateLocationFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/edit_text_start_date_location_filter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextEndDateLocationFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/edit_text_end_date_location_filter"
        app:layout_constraintTop_toBottomOf="@id/editTextStartDateLocationFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
